// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hotkey matches snapshot 1`] = `
<DocumentFragment>
  <kbd
    class="sc-grxQYx gHwJYh"
  >
    bar
  </kbd>
</DocumentFragment>
`;

exports[`Hotkey matches snapshot when component is selected 1`] = `
<DocumentFragment>
  <kbd
    class="sc-grxQYx iBIajC"
  >
    bar
  </kbd>
</DocumentFragment>
`;
